--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "MIT",
   "devDependencies": {
     "cypress": "^10.4.0",
-    "cypress-mochawesome-reporter": "^3.2.0"
+    "cypress-mochawesome-reporter": "^3.2.0",
+    "cypress-multi-reporters": "^1.6.1"
   }
 }
